Changed color legend

--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -40,8 +40,8 @@
   <p class="text-center">
     <i>
       <small>
-        <span class="bg-green text-nowrap px-2 py-1">odohratý zápas</span>
-        <span class="bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
+        <span class="table-bg-green text-nowrap px-2 py-1">odohratý zápas</span>
+        <span class="table-bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
       </small>
     </i>
   </p>
