--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -71,7 +71,7 @@
       </tbody>
     </table>
   </div>
-  <p class="text-center"><i><small><span class="bg-green px-2 py-1">zápas v kole odohratý</span></small></i></p>
+  <p class="text-center"><i><small><span class="table-bg-green px-2 py-1">zápas v kole odohratý</span></small></i></p>
 <% else %>
   <div class="row">
     <div class="col">
