Changed text on page

--- a/app/views/pages/season2021.html.erb
+++ b/app/views/pages/season2021.html.erb
@@ -2,9 +2,6 @@
   <h1 class="display-3 text-center pb-4">
     Vitajte v sezóne <span class="px-4 bg-black"><strong>2021!</strong></span>
   </h1>
-<!--    <h1 class="display-3 text-center">-->
-<!--      Vitajte v sezóne <strong class="text-light bg-dark p-4">2021!</strong>-->
-<!--    </h1>-->
 
   <hr>
   <h2 class="text-center pt-5">
@@ -12,7 +9,9 @@
   </h2>
   <p class="text-justify">
     Veríme, že sa tiež už tešíte na začiatok sezóny 2021 a že sa do nej plánujete aktívne zapojiť!
-    Dúfame, že s oteplením príde aj zmiernenie lockdownu a začneme znova konečne hrať tenis :-)
+    Po zimnej prestávke v znamení lockdownu sa žiada si to riadne vynahradiť.
+    Prihlásiť sa do tejto sezóny je jednoduché - stačí kontaktovať ktoréhokoľvek z organizátorov
+    a slušne pozdraviť :-)
   </p>
   <div class="row text-center">
     <div class="col-md-6">
@@ -28,7 +27,11 @@
       </p>
     </div>
   </div>
-
+  <p class="text-center">
+    <i>
+      ... no a potom aj zaplatiť štartovné 20€ :-) V štartovnom sú zahrnuté lopty a gripy šťastia ;-)
+    </i>
+  </p>
   <%= image_tag "bart_playing_better.png", alt: "Bart Simpson", class: "center-image" %>
 
   <hr>
@@ -43,8 +46,10 @@
       <strong>ŽREBOVANIE ZÁPASOV</strong><br>
       Prvé kolo sezóny sa bude žrebovať použitím nasadených hráčov. Počet nasadených hráčov bude
       určený podľa celkového počtu prihlásených hráčov do sezóny.
-      Presný spôsob vyžrebovania začiatku
-      súťaže bude popísaný na tejto stránke v priebehu apríla.
+      Ku každému nasadenému hráčovi
+      sa dožrebuje nenasadený súper. Všetky ďalšie zápasy od druhého kola ďalej bude žrebovať
+      počítač na základe aktuálneho počtu nahratých bodov v súlade
+      s pravidlami súťaže.
     </li>
     <li class="pt-1">
       <strong>SÚČET BODOV SÚPEROV</strong><br>
