Changed text on page

--- a/app/views/pages/season2021.html.erb
+++ b/app/views/pages/season2021.html.erb
@@ -35,6 +35,12 @@
   <%= image_tag "bart_playing_better.png", alt: "Bart Simpson", class: "center-image" %>
 
   <hr>
+  <h2 class="text-center pt-5">Harmonogram</h2>
+  <p class="text-justify">
+    Vyžrebovanie prvého kola je naplánované na podvečer v sobotu 1. mája a zápasy sa začnú hrať od
+    nedele 2. mája. V základnej časti sa (ak nebude sezóna prerušená) odohrá 9 kol, pričom posledné
+    kolo končí v nedeľu 12. septembra. Finálový víkend je plánovaný na 18-19. septembra.
+  </p>
   <h2 class="text-center pt-5">
     Novinky sezóny 2021
   </h2>
