--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
       <%#= link_to matches_path, class: 'navbar-brand' do %>
 <!--        <em>ma</em><strong>TO</strong><em>tenis</em>-->
       <%# end %>
-      <%= link_to pages_season2021_path, class: 'navbar-brand' do %>
+      <%= link_to matches_path, class: 'navbar-brand' do %>
         <em>ma</em><strong>TO</strong><em>tenis</em>
       <% end %>
     </div>
