Changed background color for planned matches

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -200,6 +200,9 @@ ol {
 .table-bg-darken-yellow {
   background-color: $yellowbg_darken;
 }
+.table-bg-salmon {
+  background-color: $salmonbg
+}
 .dark-gray {
   color: $dark_gray;
 }
