Added a legend to matches table, fixed query of enrolled players

--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -42,6 +42,7 @@
       <small>
         <span class="table-bg-green text-nowrap px-2 py-1">odohratý zápas</span>
         <span class="table-bg-yellow text-nowrap px-2 py-1">odohratý dnes, alebo včera</span>
+        <span class="table-bg-salmon text-nowrap px-2 py-1">naplánovaný zápas</span>
       </small>
     </i>
   </p>
