--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <%= link_to 'Sezóna 2021', pages_season2021_path, class: 'nav-link'  %>
         </li>
+        <li class="nav-item">
+          <%= link_to "História", history_seasons_path, class: 'nav-link' %>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
