Added image of Tomas and Ondro

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -107,6 +107,9 @@
 
   <hr>
 
+  <%= image_tag "tando.jpg", width: "50%", class: "d-none d-sm-block mx-auto" %>
+  <%= image_tag "tando.jpg", width: "100%", class: "d-sm-none mx-auto" %>
+
   <h4 class="text-center pt-5">Viac info a prihlásenie</h4>
   <p class="text-center">
     Tomáš Radič ● <strong><%= link_to '0905 289 248', 'tel:0905289248' %></strong><br>
