--- a/app/views/history_seasons/index.html.erb
+++ b/app/views/history_seasons/index.html.erb
@@ -1,5 +1,5 @@
 <% Season.default.includes(:matches, :rounds, :players).each do |season| %>
-  <section class="p-5">
+  <section class="p-xl-5">
     <h1 class="text-center"><%= season.name %></h1>
     <div class="row">
       <div class="col-xl-4">
