Changed text on pages

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -190,7 +190,7 @@
             <input class="form-check-input element-enabler" data-element-id="finish-confirmation-button" type="checkbox" value="" id="finish-confirmation-checkbox">
             <label class="form-check-label" for="finish-confirmation-checkbox">
               <small>
-                Skontroloval som tento výsledok a chcem ho naozaj potvrdiť. POTVRDENÝ VÝSLEDOK SA UŽ NEDÁ ZMENIŤ a ja to chápem a súhlasím s tým.
+                Znova som skonroloval/a výsledok, ktorý zapisujem, je naozaj správny ;-)
               </small>
             </label>
           </div>
