--- a/app/views/history_seasons/index.html.erb
+++ b/app/views/history_seasons/index.html.erb
@@ -8,7 +8,7 @@
             <tbody>
               <tr>
                 <td>Začiatok</td>
-                <% start_date = season.rounds.regular.default.last&.created_at %>
+                <% start_date = season.rounds.regular.default.last&.period_begins %>
                 <td>
                   <%= start_date ? I18n.localize(start_date, format: :date_month) : '-' %></td>
               </tr>
