Changed history index page - end of season

--- a/app/views/history_seasons/index.html.erb
+++ b/app/views/history_seasons/index.html.erb
@@ -16,7 +16,7 @@
               <% if (Season.default.first != season) && last_finished_match %>
                 <tr>
                   <td>Koniec</td>
-                  <td><%= I18n.localize(last_finished_match.finished_at, format: :date_month) %></td>
+                  <td><%= I18n.localize(last_finished_match.finished_at.to_date, format: :date_month) %></td>
                 </tr>
                 <tr>
                   <td>Počet kol</td>
