--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -160,7 +160,7 @@ ol {
   height: 228px;
   width: 100%;
   background-attachment: fixed;
-  background-image: url("banner-img2.jpg");
+  background-image: url("banner_img.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   //background-size: 100% 192px;
