--- a/app/views/pages/game_rules.html.erb
+++ b/app/views/pages/game_rules.html.erb
@@ -40,7 +40,7 @@
 
   <hr>
   <h4 class="text-center pt-5">Správanie sa na dvorci</h4>
-  <%= image_tag "bart_fair_play.png", alt: "Bart Simpson", class: "center-image" %>
+  <%= image_tag "bart_fair_play.jpg", alt: "Bart Simpson", class: "center-image" %>
   <ol class="text-justify">
     <li>
       Hráč má právo počas zápasu požiadať svojho súpera, aby sa "nevyjadroval na jeho adresu
