--- a/app/views/pages/season2021.html.erb
+++ b/app/views/pages/season2021.html.erb
@@ -32,7 +32,7 @@
       ... no a potom aj zaplatiť štartovné 20€ :-) V štartovnom sú zahrnuté lopty a gripy šťastia ;-)
     </i>
   </p>
-  <%= image_tag "bart_playing_better.png", alt: "Bart Simpson", class: "center-image" %>
+  <%= image_tag "bart_playing_better.jpg", alt: "Bart Simpson", class: "center-image" %>
 
   <hr>
   <h2 class="text-center pt-5">Harmonogram</h2>
