--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -17,5 +17,5 @@ $greenbg: #bcf7c5;
 $greenbg_darken: darken($greenbg, 6);
 $yellowbg: #f5e1a6;
 $yellowbg_darken: darken($yellowbg, 6);
-$salmonbg: #efbcac;
+$salmonbg: #fbf0ed;
 $dark_gray: #7b7878;
