--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -200,8 +200,8 @@ ol {
 .table-bg-darken-yellow {
   background-color: $yellowbg_darken;
 }
-.table-bg-salmon {
-  background-color: $salmonbg
+.table-bg-smoke {
+  background-color: $smokebg
 }
 .dark-gray {
   color: $dark_gray;
