--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -55,7 +55,7 @@
       <div class="col">
         <div class="actions">
           <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
-          <%= link_to 'Zrušiť', round_path(@match.round), class: 'btn btn-lg btn-outline-success my-1' %>
+          <%= link_to 'Zrušiť', manager_round_path(@match.round), class: 'btn btn-lg btn-outline-success my-1' %>
         </div>
       </div>
     </div>
