--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -74,7 +74,7 @@
       <div class="col">
         <div class="actions pl-2">
           <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
-          <%= link_to 'Zrušiť', round_path(@round), class: 'btn btn-lg btn-outline-success my-1' %>
+          <%= link_to 'Zrušiť', manager_round_path(@round), class: 'btn btn-lg btn-outline-success my-1' %>
         </div>
       </div>
     </div>
