--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,8 +43,8 @@
               Administrácia
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to 'Sezóny', seasons_path, class: 'dropdown-item' %>
-              <%= link_to 'Kolá a zápasy', rounds_path, class: 'dropdown-item' %>
+              <%= link_to 'Sezóny', manager_seasons_path, class: 'dropdown-item' %>
+              <%= link_to 'Kolá a zápasy', manager_rounds_path, class: 'dropdown-item' %>
               <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
               <%= link_to 'Novinky', articles_path, class: 'dropdown-item'  %>
               <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
