--- a/app/views/manager/places/_form.html.erb
+++ b/app/views/manager/places/_form.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/validation_errors_announcement', validated_object: place %>
-<%= form_with(model: place, local: true) do |form| %>
+<%= form_with(model: [:manager, place], local: true) do |form| %>
   <div class="row">
     <div class="col">
       <div class="<%= add_error_class_to('pl-2', place, :name) %>">
@@ -16,7 +16,7 @@
       <div class="pl-2">
         <div class="actions">
           <%= submit_tag 'Potvrdiť', class: 'btn btn-lg btn-success my-1' %>
-          <%= link_to 'Zrušiť', places_path, class: 'btn btn-lg btn-outline-success my-1' %>
+          <%= link_to 'Zrušiť', manager_places_path, class: 'btn btn-lg btn-outline-success my-1' %>
         </div>
       </div>
     </div>
