--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,8 +47,8 @@
               <%= link_to 'Kolá a zápasy', manager_rounds_path, class: 'dropdown-item' %>
               <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
               <%= link_to 'Novinky', articles_path, class: 'dropdown-item'  %>
-              <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
-              <%= link_to 'Miesta', places_path, class: 'dropdown-item' %>
+              <%= link_to 'Kategórie', manager_categories_path, class: 'dropdown-item'  %>
+              <%= link_to 'Miesta', manager_places_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to 'Kredit', payments_path, class: 'dropdown-item' %>
             </div>
