Articles - manager actions separated

--- a/app/views/articles/_tile.html.erb
+++ b/app/views/articles/_tile.html.erb
@@ -21,7 +21,7 @@
       </p>
     <% else %>
       <p class="card-text text-secondary" id="article-content-<%= article.id %>">
-        <%= link_to "(NEZVEREJNENÉ)", edit_article_path(article) %>
+        <%= link_to "(NEZVEREJNENÉ)", edit_manager_article_path(article) %>
       </p>
     <% end %>
   </div>
