--- a/app/views/manager/enrollments/new.html.erb
+++ b/app/views/manager/enrollments/new.html.erb
@@ -11,7 +11,7 @@
       </p>
       <p>
         <%= render 'shared/validation_errors_announcement', validated_object: @enrollment %>
-        <%= form_with(model: @enrollment, local: true) do |form| %>
+        <%= form_with(model: [:manager, @enrollment], local: true) do |form| %>
           <div class="<%= add_error_class_to('pl-2', @enrollment, :player) %>">
             <div class="form-group">
               <%= form.label :player_id, 'Meno hráča' %><br />
@@ -40,7 +40,7 @@
       </p>
       <p>
         <%= render 'shared/validation_errors_announcement', validated_object: @player %>
-        <%= form_with(url: enrollments_path, local: true) do |form| %>
+        <%= form_with(url: manager_enrollments_path, local: true) do |form| %>
           <div class="row">
             <div class="col-lg-6">
               <div class="<%= add_error_class_to('pl-2', @player, :first_name) %>">
@@ -122,4 +122,4 @@
   </div>
 </div>
 
-<%= render 'enrollments/scripts' %>
+<%= render 'manager/enrollments/scripts' %>
