HttpRequests index page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,6 +51,7 @@
               <%= link_to 'Miesta', places_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to 'Kredit', payments_path, class: 'dropdown-item' %>
+              <%= link_to 'Návštevnosť', http_requests_path, class: 'dropdown-item' %>
             </div>
           </li>
           <li class="nav-item dropdown">
