--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -72,7 +72,7 @@
   </p>
   <p>Kategórie sú nasledovné</p>
   <ul>
-    <% Category.all.each do |category| %>
+    <% Category.sorted.each do |category| %>
       <li>
         <%= category.name %>
         <% if category.detail.present? %>
