Enabled jumper of season header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       </div>
     <% end %>
     <%= render 'shared/navbar' %>
-    <%#= render 'shared/hot_announcement' %>
+    <%= render 'shared/hot_announcement' %>
     <%= render 'shared/flash_message' unless flash.blank? %>
     <div class="img-banner mb-2"></div>
     <div class="container-fluid">
