--- a/app/views/matches/_table.html.erb
+++ b/app/views/matches/_table.html.erb
@@ -19,19 +19,41 @@
         </tr>
       </thead>
       <tbody class="<%= js_filter_target %>">
-        <% matches.each do |match| %>
-          <% next if !user_signed_in? && (match.player1.dummy? || match.player2.dummy?) %>
-          <%= render partial: 'matches/table_row', locals: { match: match, delayed: false } %>
-        <% end %>
-        <% if delayed_matches&.any? %>
-          <tr class="border-top-thick">
-            <td colspan="5">
-              <p class="text-danger"><i><%= delayed_matches_announcement(delayed_matches) %></i></p>
-            </td>
+
+        <% if matches.planned.any? %>
+          <tr class="text-center">
+            <td colspan="5">Naplánované zápasy</td>
           </tr>
-          <% delayed_matches.each do |delayed_match| %>
-            <% next if !user_signed_in? && (delayed_match.player1.dummy? || delayed_match.player2.dummy?) %>
-            <%= render partial: 'matches/table_row', locals: { match: delayed_match, delayed: true } %>
+          <% matches.planned.each do |match| %>
+            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-smoke" } %>
+          <% end %>
+        <% end %>
+
+        <% if matches.recent.any? %>
+          <tr class="text-center border-top-thick">
+            <td colspan="5">Posledné odohraté zápasy</td>
+          </tr>
+          <% matches.recent.each do |match| %>
+            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-yellow" } %>
+          <% end %>
+        <% end %>
+
+        <% if matches.previous.any? %>
+          <tr class="text-center border-top-thick">
+            <td colspan="5">Odohraté predtým</td>
+          </tr>
+          <% matches.previous.each do |match| %>
+            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "table-bg-green" } %>
+          <% end %>
+        <% end %>
+
+        <% unplanned_matches = matches.pending.where(play_date: nil) %>
+        <% if unplanned_matches.any? %>
+          <tr class="text-center border-top-thick">
+            <td colspan="5">Čakajúce na termín</td>
+          </tr>
+          <% unplanned_matches.each do |match| %>
+            <%= render partial: 'matches/table_row', locals: { match: match, color_class: "" } %>
           <% end %>
         <% end %>
       </tbody>
